[gd_scene load_steps=5 format=3 uid="uid://mec5wqbebbnw"]

[ext_resource type="Script" path="res://Components/OrdersPanel.gd" id="1_bi02l"]
[ext_resource type="Theme" uid="uid://qpjfkm1dnyec" path="res://Resources/baseTheme.tres" id="2_jenoa"]
[ext_resource type="Script" path="res://Scripts/AreaScanner.gd" id="3_2rp02"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s2hpp"]
bg_color = Color(0.145098, 0.713726, 0.376471, 1)

[node name="OrdersPanel" type="Node2D"]
script = ExtResource("1_bi02l")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1080.0
offset_bottom = 317.0
color = Color(0.0117647, 0.141176, 0.211765, 1)

[node name="Label" type="Label" parent="."]
offset_left = 15.0
offset_top = 17.0
offset_right = 101.0
offset_bottom = 44.0
theme = ExtResource("2_jenoa")
theme_override_font_sizes/font_size = 26
text = "Orders: "

[node name="lblOrders" type="Label" parent="."]
offset_left = 15.0
offset_top = 58.0
offset_right = 1062.0
offset_bottom = 141.0
theme = ExtResource("2_jenoa")
theme_override_font_sizes/font_size = 26
text = "placeholder"
autowrap_mode = 3

[node name="btnPickNew" type="Button" parent="."]
offset_left = 874.0
offset_top = 190.0
offset_right = 1069.0
offset_bottom = 234.0
theme = ExtResource("2_jenoa")
theme_override_font_sizes/font_size = 26
text = "Pick New Place"

[node name="btnAddToIgnore" type="Button" parent="."]
offset_left = 702.0
offset_top = 13.0
offset_right = 1069.0
offset_bottom = 57.0
theme = ExtResource("2_jenoa")
theme_override_font_sizes/font_size = 26
text = "Never Show This Place Again"

[node name="btnNudge" type="Button" parent="."]
offset_left = 508.0
offset_top = 244.0
offset_right = 1068.0
offset_bottom = 288.0
theme = ExtResource("2_jenoa")
theme_override_font_sizes/font_size = 26
text = "Place Nearby but Inaccessible Or Not Giving Credit"

[node name="btnCompleteOrder" type="Button" parent="."]
offset_left = 15.0
offset_top = 244.0
offset_right = 136.0
offset_bottom = 279.0
theme = ExtResource("2_jenoa")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 26
theme_override_styles/normal = SubResource("StyleBoxFlat_s2hpp")
text = "Complete!"

[node name="btnDebugAdvance" type="Button" parent="."]
offset_left = 40000.0
offset_top = 285.0
offset_right = 40172.0
offset_bottom = 316.0
text = "DEBUG: Advance Plot
"

[node name="lblTSHeader" type="Label" parent="."]
offset_left = 15.0
offset_top = 164.0
offset_right = 167.0
offset_bottom = 191.0
theme = ExtResource("2_jenoa")
theme_override_font_sizes/font_size = 26
text = "Target Sector:"

[node name="lblTargetSector" type="Label" parent="."]
offset_left = 200.0
offset_top = 164.0
offset_right = 468.0
offset_bottom = 200.0
theme = ExtResource("2_jenoa")
theme_override_font_sizes/font_size = 26

[node name="lblDistHeader" type="Label" parent="."]
offset_left = 15.0
offset_top = 208.0
offset_right = 131.0
offset_bottom = 244.0
theme = ExtResource("2_jenoa")
theme_override_font_sizes/font_size = 26
text = "Distance:"

[node name="lblDistance" type="Label" parent="."]
offset_left = 200.0
offset_top = 208.0
offset_right = 601.0
offset_bottom = 244.0
theme = ExtResource("2_jenoa")
theme_override_font_sizes/font_size = 26

[node name="AreaScanner" type="Node2D" parent="."]
script = ExtResource("3_2rp02")

[connection signal="pressed" from="btnPickNew" to="." method="ChangePlace"]
[connection signal="pressed" from="btnAddToIgnore" to="." method="IgnorePlace"]
[connection signal="pressed" from="btnNudge" to="." method="NudgeCheck"]
[connection signal="pressed" from="btnCompleteOrder" to="." method="CompleteOrder"]
[connection signal="pressed" from="btnDebugAdvance" to="." method="CompleteOrder"]
